--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -77,7 +77,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che.v7.63.0-772.next
+  name: eclipse-che.v7.63.0-777.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -954,12 +954,16 @@ spec:
                         value: /dashboard/assets/branding/loader.svg
                       - name: MAX_CONCURRENT_RECONCILES
                         value: "1"
-                      - name: CHE_SPEC_COMPONENTS_DASHBOARD_HEADERMESSAGE_TEXT
-                      - name: CHE_SPEC_DEVENVIRONMENTS_DEFAULTEDITOR
+                      - name: CHE_DEFAULT_SPEC_COMPONENTS_DASHBOARD_HEADERMESSAGE_TEXT
+                      - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DEFAULTEDITOR
                         value: che-incubator/che-code/latest
-                      - name: CHE_SPEC_DEVENVIRONMENTS_DEFAULTCOMPONENTS
+                      - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DEFAULTCOMPONENTS
                         value: '[{"name": "universal-developer-image", "container":
                           {"image": "quay.io/devfile/universal-developer-image:ubi8-38da5c2"}}]'
+                      - name: CHE_DEFAULT_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
+                        value: https://open-vsx.org
+                      - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
+                        value: "false"
                     image: quay.io/eclipse/che-operator:next
                     imagePullPolicy: Always
                     livenessProbe:
@@ -1239,7 +1243,7 @@ spec:
   minKubeVersion: 1.19.0
   provider:
     name: Eclipse Foundation
-  version: 7.63.0-772.next
+  version: 7.63.0-777.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
