--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -106,7 +106,7 @@ spec:
             - name: CHE_DEFAULT_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
               value: https://open-vsx.org
             - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
-              value: false
+              value: 'false'
           livenessProbe:
             httpGet:
               path: /healthz
