fix: Dockerfile for OpenShift CI
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/.ci/openshift-ci/Dockerfile
+++ b/.ci/openshift-ci/Dockerfile
@@ -17,7 +17,8 @@ FROM registry.ci.openshift.org/openshift/release:golang-1.18
 SHELL ["/bin/bash", "-c"]
 
 # Install yq, kubectl, chectl cli.
-RUN yum install --assumeyes -d1 python3-pip  httpd-tools nodejs && \
+RUN yum install --assumeyes -d1 python3-pip nodejs && \
+    pip3 install --upgrade pip && \
     pip3 install --upgrade setuptools && \
     pip3 install yq && \
     curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && \
